unpackaged/main/default/objects/Opportunity/fields/TelefonoCelular_eliminado__c.field-meta.xml
<CustomField>
    <fullName>TelefonoCelular_eliminado__c</fullName>
    <label>Teléfono Celular_eliminado</label>
    <type>Phone</type>
</CustomField>