unpackaged/main/default/objects/Opportunity/fields/Tiene_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Tiene_Vivienda__c</fullName>
    <label>Tiene Vivienda</label>
    <summarizedField>OpportunityLineItem.Tiene_Vivienda__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>