unpackaged/main/default/objects/Opportunity/fields/Tipo_de_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Asesor__c</fullName>
    <label>Tipo de Asesor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>