unpackaged/main/default/objects/Opportunity/fields/Tipo_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Cliente__c</fullName>
    <formula>IF(
   OR(Account.RecordType.Name = &quot;PROSPECTO PERSONA MORAL&quot;,
   Account.RecordType.Name = &quot;AFLUENTE PERSONA MORAL&quot;,
   Account.RecordType.Name = &quot;CLIENTE PERSONA MORAL&quot;
   ), &quot;Persona Moral&quot;, 
   IF(  
       OR(Account.RecordType.Name = &quot;PROSPECTO PERSONA FISICA&quot;,
       Account.RecordType.Name = &quot;AFLUENTE PERSONA FISICA&quot;,
       Account.RecordType.Name = &quot;CLIENTE PERSONA FISICA&quot;
       ), &quot;Persona Física&quot;, 
          &quot;El Cliente Pertenece a otro Proceso Comercial&quot; 
   ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Cliente</label>
    <type>Text</type>
</CustomField>