unpackaged/main/default/objects/Opportunity/fields/Tipo_de_Credito__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Credito__c</fullName>
    <label>Tipo de Crédito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_Credito</valueSetName>
    </valueSet>
</CustomField>