unpackaged/main/default/objects/Opportunity/fields/Tipo_de_Tramite__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Tramite__c</fullName>
    <label>Tipo de Trámite</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Producto_financiero__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONYUGAL</fullName>
            </value>
            <value>
                <fullName>INDIVIDUAL</fullName>
            </value>
            <value>
                <fullName>UNAMOS CRÉDITOS</fullName>
            </value>
            <value>
                <fullName>FOVISSSTE PARA TODOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>