unpackaged/main/default/objects/Opportunity/fields/Tipo_de_Tramite_Formula__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Tramite_Formula__c</fullName>
    <formula>IF( TEXT(Producto_financiero__c) =&quot;FOVISSSTE PARA TODOS&quot;, &quot;FOVISSSTE PARA TODOS&quot;, 
   IF( TEXT(Producto_financiero__c) =&quot;UNAMOS CRÉDITOS&quot;, &quot;UNAMOS CRÉDITOS&quot;, 
      IF( OR(TEXT(Producto_financiero__c) =&quot;COFINAVIT CONYUGAL&quot;,
             TEXT(Producto_financiero__c) =&quot;CONYUGAL&quot;,
             TEXT(Producto_financiero__c) =&quot;CONYUGAL C/SUBSIDIO 2.6 VSM&quot;,
             TEXT(Producto_financiero__c) =&quot;CONYUGAL C/SUBSIDIO 5 VSM&quot;), &quot;CONYUGAL&quot;, 
         &quot;INDIVIDUAL&quot;
        )
      )
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Para modificar este valor, es necesario seleccionar el Producto Financiero correcto y el tipo de tr´mite se ajustará auromáticamente.</inlineHelpText>
    <label>Tipo de Trámite</label>
    <type>Text</type>
</CustomField>