unpackaged/main/default/objects/Opportunity/fields/Titulacion__c.field-meta.xml
<CustomField>
    <fullName>Titulacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Titulación</label>
    <referenceTo>Titulacion__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>