unpackaged/main/default/objects/Opportunity/fields/Valor_Escritura__c.field-meta.xml
<CustomField>
    <fullName>Valor_Escritura__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Valor Escritura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>