unpackaged/main/default/objects/Opportunity/fields/Valor_Operacion__c.field-meta.xml
<CustomField>
    <fullName>Valor_Operacion__c</fullName>
    <label>Suma de Productos</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>