unpackaged/main/default/objects/Opportunity/fields/Valor_Operacion_Formula_PlanVenta__c.field-meta.xml
<CustomField>
    <fullName>Valor_Operacion_Formula_PlanVenta__c</fullName>
    <formula>VALUE(LEFT(Plan_de_Venta__r.Compara_VO_Source_PlainField__c, LEN(Plan_de_Venta__r.Compara_VO_Source_PlainField__c)-2)) + 
VALUE(RIGHT(Plan_de_Venta__r.Compara_VO_Source_PlainField__c,2))*0.01</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>