unpackaged/main/default/objects/Opportunity/fields/Valores_previos__c.field-meta.xml
<CustomField>
    <fullName>Valores_previos__c</fullName>
    <description>Unicamente para guardar los valores previos de los campos de lookup &quot;Asesor&quot; y &quot;Lead Profiler&quot; cuando se envia a aprobación y / o se rechaza la oportunidad
Visible solo para el admin del sistema</description>
    <inlineHelpText>Unicamente para guardar los valores previos de los campos de lookup &quot;Asesor&quot; y &quot;Lead Profiler&quot; cuando se envia a aprobación y / o se rechaza la oportunidad
Visible solo para el admin del sistema</inlineHelpText>
    <label>Valores previos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>