unpackaged/main/default/objects/Opportunity/fields/Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Vivienda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vivienda</label>
    <referenceTo>Vivienda__c</referenceTo>
    <relationshipLabel>Procesos de Ventas</relationshipLabel>
    <relationshipName>Procesos_de_Ventas</relationshipName>
    <type>Lookup</type>
</CustomField>