unpackaged/main/default/objects/Opportunity/fields/Ya_tiene_Dictaminacion__c.field-meta.xml
<CustomField>
    <fullName>Ya_tiene_Dictaminacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ya tiene Dictaminación?</label>
    <type>Checkbox</type>
</CustomField>