unpackaged/main/default/objects/Opportunity/recordTypes/Proceso_de_Venta.recordType-meta.xml
<RecordType>
    <fullName>Proceso_de_Venta</fullName>
    <active>true</active>
    <businessProcess>Proceso de Ventas</businessProcess>
    <label>Proceso de Venta</label>
</RecordType>