unpackaged/main/default/objects/Opportunity/validationRules/Editable_Canal_de_Venta.validationRule-meta.xml
<ValidationRule>
    <fullName>Editable_Canal_de_Venta</fullName>
    <active>true</active>
    <description>Editable, a excepción de procesos de venta con estatus Escriturado, Entregado o Cancelado</description>
    <errorConditionFormula>AND
(
OR
(
ISPICKVAL( StageName , &quot;Escriturado&quot;),
ISPICKVAL( StageName , &quot;Entregado&quot;),
ISPICKVAL( StageName , &quot;Cancelado&quot;)
),
ISCHANGED( Canal_de_venta__c )
)</errorConditionFormula>
    <errorDisplayField>Canal_de_venta__c</errorDisplayField>
    <errorMessage>Editable, a excepción de procesos de venta con estatus Escriturado, Entregado o Cancelado</errorMessage>
</ValidationRule>