unpackaged/main/default/objects/Opportunity/validationRules/Editable_Colaborador_Javer.validationRule-meta.xml
<ValidationRule>
    <fullName>Editable_Colaborador_Javer</fullName>
    <active>true</active>
    <description>Editable, a excepción de procesos de venta con estatus Escriturado, Entregado o Cancelado</description>
    <errorConditionFormula>OR(

/* Validar permiso especial Rol de venta corresponde a permiso del usuario */
AND(

ISPICKVAL($User.Editar_rol_de_venta__c ,&#39;Colaborador Javer&#39;),
NOT(ISPICKVAL(StageName , &quot;Escriturado&quot;)),
NOT(ISPICKVAL(StageName , &quot;Entregado&quot;)),
ISCHANGED(Colaborador_Javer__c)
),

/* Validar permiso especial Rol de venta != a permiso del usuario */
AND(

NOT(ISPICKVAL($User.Editar_rol_de_venta__c ,&#39;&#39;)),
NOT(ISPICKVAL($User.Editar_rol_de_venta__c ,&#39;Colaborador Javer&#39;)),
ISCHANGED(Colaborador_Javer__c)
),

/* Validar perfil != a &#39;Administrador Colaborador Javer&#39;*/
AND
(
$User.ProfileId != &#39;00e0r000000QQoQ&#39;,
OR
(
ISPICKVAL( StageName , &quot;Escriturado&quot;),
ISPICKVAL( StageName , &quot;Entregado&quot;),
ISPICKVAL( StageName , &quot;Cancelado&quot;)
),
ISCHANGED( Colaborador_Javer__c)
),


/* Validar perfil == a &#39;Administrador Colaborador Javer&#39;*/
AND
(
$User.ProfileId == &#39;00e0r000000QQoQ&#39;,
NOT(ISPICKVAL( StageName , &quot;Reservado&quot;)),
NOT(ISPICKVAL( StageName , &quot;Formalizado&quot;)),
ISCHANGED(Colaborador_Javer__c)
)

)</errorConditionFormula>
    <errorDisplayField>Colaborador_Javer__c</errorDisplayField>
    <errorMessage>Editable, a excepción de procesos de venta con estatus Escriturado, Entregado o Cancelado
Para usuarios con perfil &quot;Administrador Colaborador Javer&quot; el estatus debe ser Reservado o Formalizado y/o permiso especial no corresponde al rol a editar</errorMessage>
</ValidationRule>