unpackaged/main/default/objects/Opportunity/validationRules/Editable_Financiera.validationRule-meta.xml
<ValidationRule>
    <fullName>Editable_Financiera</fullName>
    <active>true</active>
    <description>Editable, a excepción de procesos de venta con estatus Por Entregar  o Cancelado</description>
    <errorConditionFormula>AND
(
OR
(
ISPICKVAL(Subestatus__c , &quot;Por Entregar&quot;),
ISPICKVAL(Subestatus__c , &quot;Cancelado&quot;)
),
ISCHANGED(Financiera__c)
)</errorConditionFormula>
    <errorDisplayField>Financiera__c</errorDisplayField>
    <errorMessage>Editable, a excepción de procesos de venta con estatus Por Entregar  o Cancelado</errorMessage>
</ValidationRule>