unpackaged/main/default/objects/Opportunity/validationRules/Editable_Prospectador.validationRule-meta.xml
<ValidationRule>
    <fullName>Editable_Prospectador</fullName>
    <active>true</active>
    <description>Editable, a excepción de procesos de venta con estatus Escriturado, Entregado o Cancelado</description>
    <errorConditionFormula>OR(

/* Validar permiso especial Rol de venta corresponde a permiso del usuario */
AND(

ISPICKVAL($User.Editar_rol_de_venta__c ,&#39;Prospectador&#39;),
NOT(ISPICKVAL(StageName , &quot;Escriturado&quot;)),
NOT(ISPICKVAL(StageName , &quot;Entregado&quot;)),
ISCHANGED(Prospectador__c)
),

/* Validar permiso especial Rol de venta != a permiso del usuario */
AND(

NOT(ISPICKVAL($User.Editar_rol_de_venta__c ,&#39;&#39;)),
NOT(ISPICKVAL($User.Editar_rol_de_venta__c ,&#39;Prospectador&#39;)),
ISCHANGED(Prospectador__c)
),

/* Validar perfil != a &#39;Jefe de Formalización &#39;*/
AND
(
$User.ProfileId != &#39;00e0r000000QQoV&#39;,
OR
(
ISPICKVAL( StageName , &quot;Escriturado&quot;),
ISPICKVAL( StageName , &quot;Entregado&quot;),
ISPICKVAL( StageName , &quot;Cancelado&quot;)
),
ISCHANGED(Prospectador__c)
),

/* Validar perfil == a &#39;Jefe de Formalización &#39;*/
AND
(
$User.ProfileId == &#39;00e0r000000QQoV&#39;,
NOT(ISPICKVAL( StageName , &quot;Reservado&quot;)),
NOT(ISPICKVAL( StageName , &quot;Formalizado&quot;)),
ISCHANGED(Prospectador__c)
)

)</errorConditionFormula>
    <errorDisplayField>Prospectador__c</errorDisplayField>
    <errorMessage>Editable, a excepción de procesos de venta con estatus Escriturado, Entregado o Cancelado
Para usuarios con perfil &quot;Jefe de Formalización&quot; el estatus debe ser Reservado o Formalizado y/o permiso especial no corresponde al rol a editar</errorMessage>
</ValidationRule>