unpackaged/main/default/objects/Opportunity/validationRules/Motivo_cambio_asesor.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivo_cambio_asesor</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Asesor__c) &amp;&amp; LEN( Motivo_cambio_asesor__c )=0</errorConditionFormula>
    <errorDisplayField>Motivo_cambio_asesor__c</errorDisplayField>
    <errorMessage>Se requiere capturar la razón del motivo de cambio de asesor</errorMessage>
</ValidationRule>