unpackaged/main/default/objects/Opportunity/validationRules/Motivo_cambio_canal_de_venta.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivo_cambio_canal_de_venta</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Canal_de_venta__c ) &amp;&amp; LEN(  Motivo_cambio_canal_de_venta__c )=0</errorConditionFormula>
    <errorDisplayField>Motivo_cambio_canal_de_venta__c</errorDisplayField>
    <errorMessage>Se requiere capturar la razón del motivo de cambio de asesor</errorMessage>
</ValidationRule>