unpackaged/main/default/objects/Opportunity/validationRules/Motivo_cambio_Lead_Profiler.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivo_cambio_Lead_Profiler</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Lead_Profiler__c) &amp;&amp; LEN(   Motivo_cambio_Lead_Profiler__c)=0</errorConditionFormula>
    <errorDisplayField>Motivo_cambio_Lead_Profiler__c</errorDisplayField>
    <errorMessage>Se requiere capturar la razón del motivo de cambio de asesor</errorMessage>
</ValidationRule>