unpackaged/main/default/objects/Opportunity/validationRules/Motivo_cambio_prospectador.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivo_cambio_prospectador</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Prospectador__c) &amp;&amp; LEN(  Motivo_cambio_prospectador__c)=0</errorConditionFormula>
    <errorDisplayField>Motivo_cambio_prospectador__c</errorDisplayField>
    <errorMessage>Se requiere capturar la razón del motivo de cambio de asesor</errorMessage>
</ValidationRule>