unpackaged/main/default/objects/Opportunity/validationRules/Motivos_Obligatorio_si_cambia_Asesor.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivos_Obligatorio_si_cambia_Asesor</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(ISCHANGED(Asesor__c), NOT(ISCHANGED(Motivo_cambio_asesor__c))), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Motivo_cambio_asesor__c</errorDisplayField>
    <errorMessage>El Asesor cambió, por favor indique los motivos del cambio</errorMessage>
</ValidationRule>