unpackaged/main/default/objects/Opportunity/validationRules/Motivos_Obligatorio_si_cambia_Colaborado.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivos_Obligatorio_si_cambia_Colaborado</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(ISCHANGED(Colaborador_Javer__c), NOT(ISCHANGED(Motivo_cambio_Colaborador_Javer__c))), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Motivo_cambio_Colaborador_Javer__c</errorDisplayField>
    <errorMessage>El Colaborador cambió, por favor indique los motivos del cambio</errorMessage>
</ValidationRule>