unpackaged/main/default/objects/Opportunity/validationRules/Motivos_Obligatorio_si_cambia_LeadProf.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivos_Obligatorio_si_cambia_LeadProf</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(ISCHANGED(Lead_Profiler__c), NOT(ISCHANGED(Motivo_cambio_Lead_Profiler__c))), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Motivo_cambio_Lead_Profiler__c</errorDisplayField>
    <errorMessage>El Lead Profiler cambió, por favor indique los motivos del cambio</errorMessage>
</ValidationRule>