unpackaged/main/default/objects/Opportunity/validationRules/Motivos_Obligatorio_si_cambia_Prospectad.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivos_Obligatorio_si_cambia_Prospectad</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(ISCHANGED(Prospectador__c), NOT(ISCHANGED(Motivo_cambio_prospectador__c))), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Motivo_cambio_prospectador__c</errorDisplayField>
    <errorMessage>El Prospectador cambió, por favor indique los motivos del cambio</errorMessage>
</ValidationRule>