unpackaged/main/default/objects/Opportunity/validationRules/No_Puede_Haber_Mas_de_Una_Vivienda.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Puede_Haber_Mas_de_Una_Vivienda</fullName>
    <active>true</active>
    <errorConditionFormula>Tiene_Vivienda__c &gt; 1</errorConditionFormula>
    <errorMessage>No puede haber más de una vivienda por proceso de venta.</errorMessage>
</ValidationRule>