unpackaged/main/default/objects/Opportunity/validationRules/Nombre_del_Proceso_No_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Nombre_del_Proceso_No_Editable</fullName>
    <active>false</active>
    <description>El nombre del Proceso No se Puede editar</description>
    <errorConditionFormula>ISCHANGED( Name )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>La referencia del Proceso de Venta no se puede editar</errorMessage>
</ValidationRule>