unpackaged/main/default/objects/Opportunity/validationRules/NSS_noEncontrado.validationRule-meta.xml
<ValidationRule>
    <fullName>NSS_noEncontrado</fullName>
    <active>true</active>
    <description>Si el  Tipo de Crédito es igual a: COFINAVIT o INFONAVIT, el NSS no debe estar vacío</description>
    <errorConditionFormula>AND(
   OR(
      ISPICKVAL(Tipo_de_Credito__c, &#39;COFINAVIT&#39;),
      ISPICKVAL(Tipo_de_Credito__c, &#39;INFONAVIT&#39;)
   ),
   ISBLANK(Account.NSS__c)
)</errorConditionFormula>
    <errorMessage>El Tipo de Crédito requerido necesita tener el NSS en la Cuenta</errorMessage>
</ValidationRule>