unpackaged/main/default/objects/Opportunity/validationRules/Pendiente_escriturar_por.validationRule-meta.xml
<ValidationRule>
    <fullName>Pendiente_escriturar_por</fullName>
    <active>true</active>
    <description>Editable, a excepción de procesos de venta con estatus Escriturado, Entregado o Cancelado</description>
    <errorConditionFormula>AND
(
OR
(
ISPICKVAL( StageName , &quot;Escriturado&quot;),
ISPICKVAL( StageName , &quot;Entregado&quot;),
ISPICKVAL( StageName , &quot;Cancelado&quot;)
),
ISCHANGED(  Pendiente_Escriturar__c  )
)</errorConditionFormula>
    <errorDisplayField>Pendiente_Escriturar__c</errorDisplayField>
    <errorMessage>Editable, a excepción de procesos de venta con estatus Escriturado, Entregado o Cancelado</errorMessage>
</ValidationRule>