unpackaged/main/default/objects/Opportunity/validationRules/Valida_Cambio_Fraccionamiento.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Cambio_Fraccionamiento</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Fraccionamiento__c) &amp;&amp; ISBLANK(Motivo_cambio_reubicacion__c)</errorConditionFormula>
    <errorMessage>Favor de poner motivo de cambio de reubicación</errorMessage>
</ValidationRule>