unpackaged/main/default/objects/Opportunity/validationRules/Valida_Canal_Venta_Aprobado.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Canal_Venta_Aprobado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED(Canal_de_venta__c),
 Canal_y_subcanal_de_venta_aprobado__c = false
)</errorConditionFormula>
    <errorDisplayField>Canal_de_venta__c</errorDisplayField>
    <errorMessage>No se puede editar el Canal de Venta pues aún no ha sido aprobado</errorMessage>
</ValidationRule>