unpackaged/main/default/objects/Opportunity/validationRules/Valida_Check_Apellido.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Check_Apellido</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISNEW(), Account.Check_Apellido__c=TRUE,  Account.Aprobo_Check_Apellido__c=FALSE)</errorConditionFormula>
    <errorMessage>No se puede crear proceso de venta, ya que no está aprobado el Check Apellido</errorMessage>
</ValidationRule>