unpackaged/main/default/objects/Opportunity/validationRules/Valida_Financiera_Estatus.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Financiera_Estatus</fullName>
    <active>true</active>
    <errorConditionFormula>AND
( 
  OR
   (
     ISPICKVAL( StageName , &quot;Escriturado&quot;),
     ISPICKVAL( StageName , &quot;Entregado&quot;),
     ISPICKVAL( StageName , &quot;Cancelado&quot;)
   ),
  ISCHANGED( Financiera__c )
)</errorConditionFormula>
    <errorDisplayField>Financiera__c</errorDisplayField>
    <errorMessage>Editable, a excepción de procesos de venta con estatus Escriturado, Entregado o Cancelado.</errorMessage>
</ValidationRule>