unpackaged/main/default/objects/Opportunity/validationRules/Valida_Financiera_Obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Financiera_Obligatorio</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 TEXT(Tipo_de_Credito__c) &lt;&gt; &#39;CONTADO&#39;,
  ISPICKVAL(Financiera__c,&#39;&#39;)
)</errorConditionFormula>
    <errorDisplayField>Financiera__c</errorDisplayField>
    <errorMessage>Debe seleccionar la Financiera</errorMessage>
</ValidationRule>