unpackaged/main/default/objects/Opportunity/validationRules/Valida_Fraccionamiento_Estatus.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Fraccionamiento_Estatus</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL( StageName , &quot;Escriturado&quot;) || ISPICKVAL( StageName , &quot;Entregado&quot;) || ISPICKVAL( StageName , &quot;Cancelado&quot;)) &amp;&amp; ISCHANGED(  Fraccionamiento__c  )</errorConditionFormula>
    <errorDisplayField>Fraccionamiento__c</errorDisplayField>
    <errorMessage>Editable, a excepción de procesos de venta con estatus Escriturado, Entregado o Cancelado.</errorMessage>
</ValidationRule>