unpackaged/main/default/objects/Opportunity/validationRules/Valida_Inconsistencia_Estatus.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Inconsistencia_Estatus</fullName>
    <active>true</active>
    <description>Editable, a excepción de procesos de venta con estatus Escriturado, Entregado o Cancelado</description>
    <errorConditionFormula>AND
( 
  OR
   (
     ISPICKVAL( StageName , &quot;Escriturado&quot;),
     ISPICKVAL( StageName , &quot;Entregado&quot;),
     ISPICKVAL( StageName , &quot;Cancelado&quot;)
   ),

   ISCHANGED( Inconsistencia__c )
)</errorConditionFormula>
    <errorDisplayField>Inconsistencia__c</errorDisplayField>
    <errorMessage>Editable, a excepción de procesos de venta con estatus Escriturado, Entregado o Cancelado</errorMessage>
</ValidationRule>