unpackaged/main/default/objects/Opportunity/validationRules/Valida_NSS_Obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_NSS_Obligatorio</fullName>
    <active>false</active>
    <description>El NSS es obligatorio si el tipo de crédito es INFONAVIT o COFINAVIT</description>
    <errorConditionFormula>AND(
 OR(
  ISPICKVAL(Tipo_de_Credito__c, &#39;INFONAVIT&#39;),
  ISPICKVAL(Tipo_de_Credito__c, &#39;COFINAVIT&#39;)
 ),
 ISBLANK(NSS__c)
)</errorConditionFormula>
    <errorMessage>Debe ingresar el NSS</errorMessage>
</ValidationRule>