unpackaged/main/default/objects/Opportunity/validationRules/Valida_Plazo_del_Credito_Estatus.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Plazo_del_Credito_Estatus</fullName>
    <active>true</active>
    <description>Editable, a excepción de procesos de venta con estatus Escriturado, Entregado o Cancelado</description>
    <errorConditionFormula>(ISPICKVAL( StageName , &quot;Escriturado&quot;)  ||  ISPICKVAL( StageName , &quot;Entregado&quot;) ||  ISPICKVAL( StageName , &quot;Cancelado&quot;)) &amp;&amp;  ISCHANGED( Plazo_del_Credito__c )</errorConditionFormula>
    <errorDisplayField>Plazo_del_Credito__c</errorDisplayField>
    <errorMessage>Editable, a excepción de procesos de venta con estatus Escriturado, Entregado o Cancelado</errorMessage>
</ValidationRule>