unpackaged/main/default/objects/Opportunity/validationRules/Valida_Producto_financiero_Estatus.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Producto_financiero_Estatus</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
  OR(
     ISPICKVAL( StageName , &quot;Escriturado&quot;),
     ISPICKVAL( StageName , &quot;Entregado&quot;),
     ISPICKVAL( StageName , &quot;Cancelado&quot;)
    ),
 ISCHANGED( Producto_financiero__c   )

)</errorConditionFormula>
    <errorDisplayField>Producto_financiero__c</errorDisplayField>
    <errorMessage>Editable, a excepción de procesos de venta con estatus Escriturado, Entregado o Cancelado.</errorMessage>
</ValidationRule>