unpackaged/main/default/objects/Opportunity/validationRules/Valida_Prototipo_Estatus.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Prototipo_Estatus</fullName>
    <active>true</active>
    <errorConditionFormula>AND
( 
  OR
   (
     ISPICKVAL( StageName , &quot;Escriturado&quot;),
     ISPICKVAL( StageName , &quot;Entregado&quot;),
     ISPICKVAL( StageName , &quot;Cancelado&quot;)
    ),
  
   ISCHANGED(  Fraccionamiento__c  )
)</errorConditionFormula>
    <errorDisplayField>Prototipo__c</errorDisplayField>
    <errorMessage>Editable, a excepción de procesos de venta con estatus Escriturado, Entregado o Cancelado.</errorMessage>
</ValidationRule>