unpackaged/main/default/objects/Opportunity/validationRules/Valida_Regimen_P_M_Estatus.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Regimen_P_M_Estatus</fullName>
    <active>true</active>
    <description>Editable, a excepción de procesos de venta con estatus Escriturado, Entregado o Cancelado</description>
    <errorConditionFormula>AND
( 
  OR
   (
     ISPICKVAL( StageName , &quot;Escriturado&quot;),
     ISPICKVAL( StageName , &quot;Entregado&quot;),
     ISPICKVAL( StageName , &quot;Cancelado&quot;)
   ), 
     ISCHANGED( R_gimen_Patrimonial_Matrimonio__c )
)</errorConditionFormula>
    <errorDisplayField>R_gimen_Patrimonial_Matrimonio__c</errorDisplayField>
    <errorMessage>Editable, a excepción de procesos de venta con estatus Escriturado, Entregado o Cancelado</errorMessage>
</ValidationRule>