unpackaged/main/default/objects/Opportunity/validationRules/Valida_Tipo_de_Credito_Estatus.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Tipo_de_Credito_Estatus</fullName>
    <active>true</active>
    <errorConditionFormula>AND
( 
  OR
   (
     ISPICKVAL( StageName , &quot;Escriturado&quot;),
     ISPICKVAL( StageName , &quot;Entregado&quot;),
     ISPICKVAL( StageName , &quot;Cancelado&quot;)
    ),
  ISCHANGED(  Tipo_de_Credito__c  )
)</errorConditionFormula>
    <errorDisplayField>Tipo_de_Credito__c</errorDisplayField>
    <errorMessage>Editable, a excepción de procesos de venta con estatus Escriturado, Entregado o Cancelado.</errorMessage>
</ValidationRule>